--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,18 @@
 <resources>
     <string name="app_name">Measurer</string>
+
     <!-- Log in fragment -->
     <string name="welcome_back">Welcome back!</string>
     <string name="email_address">Email address</string>
     <string name="password">Password</string>
     <string name="log_in">Log in</string>
-    <string name="sign_up">Sign up</string>
+    <string name="no_user">User not found.</string>
+    <string name="empty_fields">Fields must not be empty.</string>
+
+    <!-- Sign up fragment -->
     <string name="let_s_create_new_account">Let\'s create new account!</string>
     <string name="create">Create!</string>
-    <!-- Sign up fragment -->
+    <string name="sign_up">Sign up</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
