--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,14 @@
     <string name="clear">Clear</string>
     <string name="select_scale">Select scale</string>
 
+    <!-- Measure fragment -->
+    <string name="measurement">Measurement</string>
+    <string name="send">Send</string>
+    <string name="area">Area</string>
+    <string name="height">Height</string>
+    <string name="width">Width</string>
+    <string name="material">Material</string>
+
     <!-- Measure with AR -->
     <string name="to_measurement_button">To Measurement</string>
     <string-array name="arcore_measurement_buttons">
