--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
 
     <!-- Measure with AR -->
     <string name="to_measurement_button">To Measurement</string>
+    <string name="place_dots">Place dots</string>
     <string-array name="arcore_measurement_buttons">
         <item>@string/to_measurement_button</item>
     </string-array>
