Add window measurements calculation

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -63,13 +63,18 @@
     <string name="initCM">0.0</string>
     <string name="shape_area_text">Площадь: %area% м²</string>
 
-    <!-- Calculation View -->
-    <string name="area">Площадь</string>
+    <!-- Calculation View Commons-->
     <string name="height">Высота</string>
     <string name="width">Ширина</string>
     <string name="material">Материал</string>
-    <string name="frame">Рама</string>
-    <string name="glass">Стекло</string>
+
+    <!-- Calculation Door View -->
+    <string name="area">Площадь</string>
+
+    <!-- Calculation Window View -->
+    <string name="frame_area">Площадь рамы</string>
+    <string name="frame">Рама %</string>
+    <string name="glass">Стекло %</string>
     <string name="windowsill">Подоконник</string>
     <string name="low_tide">Отлив</string>
     <string name="fittings">Фурнитура</string>
